# czitools

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  deploy.bat  env_czitools.yml  mkdocs.yml  pixi.toml  pyproject.toml  pytest.ini  release_notes.md  requirements.txt  setup.cfg  setup.py  setup.py.old  tox.ini  versions.json
.github/: copilot-instructions.md
.github/workflows/: docs.yml  test_and_deploy.yml  test_and_deploy_testpypi.yml  test_and_deploy_testpypi.yml.old
RELEASE_NOTES/: v0.14.0.md
_archive/: diagnose_czi.py  read_lazy_demo.py
_notes/: FINAL_SOLUTION.md  HCS_Wellplate_Metadata_Plan.md  NAPARI_FIX.md  mkdocs_howto.md  omezarr_pyramid_level_paths.md
_release_notes/: v0.13.0.md  v0.13.2.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.17.1.md  v0.17.2.md
archive/: misc.py  napari_tools.py  pylibczirw_metadata.py  pylibczirw_tools.py
czimetadata_tools/: misc.py  napari_tools.py  pylibczirw_metadata.py  pylibczirw_tools.py
czitools/: __init__.py
czitools/imagedata/: pylibczirw_tools.py
czitools/metadata/: pylibczirw_metadata.py
czitools/utils/: misc.py  napari_tools.py
data/: 100x100.czi  10x10.czi  1_tileregion.czi  Airyscan.czi  CH1_16bit.tif  CH3_Fluorescence_8bit.tif  CH=1_16bit.czi  CellDivision_T10_Z15_CH2_DCV_small_planetable.csv  CellDivision_T3_Z5_CH2_X240_Y170.pkl  CellDivision_T3_Z5_CH2_X240_Y170_comp1.czi  CellDivision_T3_Z5_CH2_X240_Y170_comp2.czi  CellDivision_T3_Z5_CH2_X240_Y170_planetable.csv  CellDivision_T3_Z6_CH1_X300_Y200_DCV_ZSTD.czi  CellDivision_T=3_Z=5_CH=2_X=240_Y=170_CZI_MetaData.xml  CellDivision_T=3_Z=5_CH=2_X=240_Y=170_comp.czi  CellDivision_T=3_Z=5_CH=2_X=240_Y=170_comp1.czi  CellDivision_T=3_Z=5_CH=2_X=240_Y=170_comp2.czi  CellDivision_T=3_Z=5_CH=2_X=240_Y=170_planetable.csv  DAPI_GFP.czi  FOV7_HV110_P0500510000.czi  FOV7_HV110_P0500510000.ome.tiff  Fluorescence_RGB.czi  Fluorescence_RGB.tif  LLS7_small.czi  LSM880_AiryScan.czi  S2_3x3_CH2_planetable.csv  S3_1Pos_2Mosaic_T1_Z1_CH1.czi  S3_1Pos_2Mosaic_T2Z3_CH2_sm.czi  WP96_4Pos_B4-10_DAPI_CZI_MetaData.xml  WP96_4Pos_B4-10_DAPI_planetable.csv  WellD6-7_S2.czi  WellD6_S=1.czi  newCZI_compressed.czi  nuc_small.czi  nuc_small_new_red.czi  setup.cfg  w96_A1+A2_planetable.csv
demo/: README.md
demo/experimental/: check_scene_shape.py  import_testing.py  lazy_read6d.py  omezarr_from_czi.ipynb  read_tileimage.py
demo/notebooks/: czi_wellplate_data.ipynb  omezarr_from_czi_5d.ipynb  omezarr_from_czi_5d_marimo.py  process_omezarr_HCS_plate.ipynb  read_czi_as_daskarray.ipynb  read_czi_metadata.ipynb  read_czi_metadata_marimo.py  read_czi_pixeldata.ipynb  read_czi_pixeldata_marimo.py  read_czi_pixeldata_ndv.ipynb  read_czi_pixeldata_simple.ipynb  read_czi_segment_voroni_otsu.ipynb  read_czi_wellplate_data.ipynb  save_with_ZSTD_compression.ipynb  show_czi_surface.ipynb
demo/omezarr_testing/: HCS_ZARR_METADATA_FIX.md  convert2hcs_omezarr.py  create_omezarr_example.py  misc.py  ngff_define_plate.py  ome_zarr_utils.py  plotting_utils.py  process_hcs_omezarr.py  process_hcsplate_example.py  processing_tools.py  visualize_omezarr_heatmap_marimo.py  write_hcs_ngffzarr.py  write_hcs_omezarr.py  write_omezarr.py  write_omezarr_ngff.py
demo/scripts/: benchmark_omezarr_conversion.py  export_xml_from_czi.py  hcs_non_plate_multiscene.py  hcs_plate_model.py  hcs_position_enrichment.py  hcs_read_fields.py  hcs_sample_metadata.py  hcs_stage0_sample_metadata.py  hcs_stage1_plate_model.py  hcs_stage2_position_enrichment.py  hcs_stage3_read_fields.py  lazy_read.py  napari_plugin_example.py  napari_safe_loading.py  napari_with_planetable_linux.py  napari_with_process_isolation.py  omezarr_convert_hcs.py  omezarr_convert_single_scene.py  omezarr_write_tools.py  process_hcsplate_example.py  read_attachment_images.py  read_bioio_dask_compare.py  read_czi_aicsimageio.py  read_czi_simple.py  read_mdstack.py  read_planetable.py  read_tileimage.py  run_omezarr_gui.py  use_metadata_tools.py  use_ndv.py  use_pylibczirw_md_read.py  use_pylibczirw_metadata_class.py  use_read_tools.py  use_write_tools.py  validate_omezarr.py  write_omezarr.py
demo/testing/: cell_segmentation_notebook.ipynb  colormaps.py  create_omezarr.py  mindpeak_aicspylibczi.ipynb  nuclei_segmentation_analysis.ipynb  pass_reader.py  process.py  read_bioio.py  read_bioio_scenes.py  read_bioio_subblocks.py  read_czi_scale.py  read_czi_simple.py  read_czi_timing.py  read_wells_new.py  read_write_czi_display_setting.py  try_array_from_url.py  try_metadata_from_url.py  try_xarray.py  write_czi.ipynb  write_czi_extra_metadata.py  wrong_treshold.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/install/: index.html
dev/search/: search_index.json
dev/usage/: index.html
docs/: FINAL_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  LINUX_NAPARI_PLANETABLE.md  install.md  release_notes.md  threading_considerations.md  usage.md
docs/css/: material.css
examples/notebooks/: read_czi_metadata.ipynb
examples/pylibCZIrw_docu/: Train_UNet_Export_as_CZMODEL_final.ipynb  Tutorial_pylibCZIrw.ipynb  [Doc] High level API.ipynb  [Doc] Low level binding.ipynb  conda_env_czmodel.yml  explore_czi.py  export_onnx.ipynb  process_2d_image_tilewise.ipynb  run_prediction_from_czann.ipynb  scale_image.ipynb
examples/scripts/: aicsimageio_test.py  read_czi_analyze_display_heatmap.py  test_czimetadata_class.py  test_getdim.py  test_pylibczirw_md_read.py  test_pylibczirw_metadata_class.py  test_zenheatmap.py  use_czimetadata_class.py  use_getdim.py  use_pylibczirw_md_read.py  use_pylibczirw_metadata_class.py  whitening.py
experimental/: calc_psnr.py  read_czi_simple.py  test_mosaic.py  whitening.py
src/czitools/: __init__.py  czi_metadata.py  datatreewiget.py  log.ini  logger.py  misc.py  (+10 more)
tests/: test_bounding_box.py  test_channelinfo.py  test_dimensions.py  test_md_general.py  test_read_mdarray.py  test_scaling.py
v0.16.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.17.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.17.1/: 404.html  index.html  sitemap.xml
v0.17.2/: 404.html  index.html  objects.inv  sitemap.xml
(+277 files in other folders)
