[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "czitools"
version = "0.17.2"
description = "Tools to simplify reading and CZI (Carl Zeiss Image) meta and pixel data"
readme = "README.md"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
    {name = "Sebastian Rhode", email = "sebrhode@gmail.com"}
]
requires-python = ">=3.12, <3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    "pylibCZIrw>=5",
    "progressbar2",
    "pandas",
    "python-dateutil",
    "python-box[all]",
    "czifile",
    "loguru",
    "colorlog",
    "pydantic",
    "xarray",
    # Note: xarray[complete] removed - extras don't work with conda-forge packages.
    # When using pixi with conda-forge deps, conda installs the full package regardless.
]

[project.optional-dependencies]
all = [
    "seaborn",
    "plotly",
    "qtpy",
    "pyqtgraph",
    "colormap",
    "ngff-zarr>=0.34.0",
    "ngff-zarr[validate]",
    "ngff-zarr[dask-image]",
    "ome-zarr>=0.16.0",
    "zarr>=3.0",
    "ome-zarr-models>=1.7,<2",
    "magicgui",
    "napari>=0.7.0",
    "napari-ome-zarr>=0.8.0",
    "bioio",
    "bioio-czi",
    "bioio-ome-zarr",
    "ndv[pyqt,vispy]",
    "scikit-image",
    "matplotlib",
    "tensorstore",  # optional async/parallel chunk I/O backend for ngff-zarr writes
]
# OME-Zarr / OME-NGFF export (czitools.export_tools): conversion + validation.
omezarr = [
    "ngff-zarr>=0.34.0",
    "ngff-zarr[validate]",
    "ngff-zarr[dask-image]",
    "ome-zarr>=0.16.0",
    "zarr>=3.0",
    "ome-zarr-models>=1.7,<2",
    "tensorstore",  # optional async/parallel chunk I/O backend for ngff-zarr writes
]
# OME-Zarr export plus the MagicGUI converter application.
omezarr-gui = [
    "czitools[omezarr]",
    "magicgui",
    "qtpy",
    "napari>=0.7.0",
    "napari-ome-zarr>=0.8.0",
]
# HCS analysis + plate visualization (czitools.analysis_tools).
#   process_hcs_omezarr reads HCS OME-Zarr via ngff-zarr (hence czitools[omezarr]).
analysis = [
    "czitools[omezarr]",
    "scikit-image",
    "seaborn",
    "matplotlib",
]
docs = [
    "mkdocs-material",
    "mkdocs-autorefs",
    "mkdocs-spellcheck",
    "mkdocs-api-autonav",
    "pymdown-extensions",
    "mkdocs >=1.6.1",
    "mkdocs-api-autonav >=0.1.2",
    "mkdocs-material >=9.5.49",
    "mkdocs-minify-plugin >=0.8.0",
    "mkdocs-spellcheck[codespell] ==1.1.0",
    "mkdocstrings-python >=1.13.0",
    "mike >=2.1.3",
    "ruff>=0.9.4",
    "cmap",
    "ndv",
    "matplotlib",
    "plotly",
    # Installed so the auto-generated czitools.export_tools API pages resolve
    # signature type references during the docs build.
    "ngff-zarr>=0.34.0",
    "ome-zarr>=0.16.0",
    "zarr>=3.0",
    "ome-zarr-models>=1.7,<2",
    "magicgui",
    "qtpy",
]

[project.urls]
"Bug Tracker" = "https://github.com/sebi06/czitools/issues"
"Documentation" = "https://github.com/sebi06/czitools/#README.md"
"Source Code" = "https://github.com/sebi06/czitools/"
"User Support" = "https://github.com/sebi06/czitools/issues"

[project.scripts]
czitools-omezarr-gui = "czitools.export_tools.gui:run_gui"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["data*", "docs*", "demo*", "images*", "archive*"]

[tool.setuptools.package-data]
"*" = [
    "*.czi",
    "*.tif",
    "*.tiff",
    "*.csv",
    "*.html",
    "*.zarr",
    "*MetaData.xml",
]

[tool.pytest.ini_options]
testpaths = ["src/czitools/_tests"]
pythonpath = ["src"]
norecursedirs = [".git", ".vscode", "demo", ".idea"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--ignore=old/napari_tools/test_napari_tools.py"
markers = [
    "network: marks tests that require network connectivity (deselect with '-m \"not network\"')",
]

[tool.marimo.runtime]
pythonpath = ["src"]

[tool.pixi.workspace]
name = "czitools"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
czitools = {path = ".", editable = true}

[tool.pixi.tasks]

[tool.pixi.environments]
# Crucial: "default" (the feature) refers to [project.dependencies]
# "all" and "docs" refer to [project.optional-dependencies]
default = { features = ["all", "docs", "default"], solve-group = "default" }
