[metadata]
name = czitools
version = 0.7.4
author = Sebastian Rhode
author_email = sebrhode@gmail.com
url = https://github.com/sebi06/czitools
license = GNU General Public License v3 (GPLv3)
description = Tools to simplify reading CZI (Carl Zeiss Image) meta and pixel data
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/sebi06/czitools/issues
    Documentation = https://github.com/sebi06/czitools/#README.md
    Source Code = https://github.com/sebi06/czitools/
    User Support = https://github.com/sebi06/czitools//issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9, <3.12

# add your package requirements here
install_requires =
    pylibCZIrw>=4.1.2
    aicspylibczi>=3.1.2
    tqdm
    pandas
    ome-zarr
    python-dateutil
    python-box[all]
    czifile
    loguru
    pydantic

[options.extras_require]
all =
    napari[all] # will install PyQt5
    pyqt # added 2024-11-12
    seaborn
    plotly
    pyqtgraph
    colormap

[options.packages.find]
where = src
exclude =
    data*
    docs*
    demo*
    images*
    archive

[options.exclude_package_data]
* =
  *.czi
  *.tif
  *.tiff
  *.csv
  *.html
  *.zarr
  *MetaData.xml
