[metadata]
name = czitools
version = 0.9.1
author = Sebastian Rhode
author_email = sebrhode@gmail.com
url = https://github.com/sebi06/czitools
license = GNU General Public License v3 (GPLv3)
description = Tools to simplify reading CZI (Carl Zeiss Image) meta and pixel data
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/sebi06/czitools/issues
    Documentation = https://github.com/sebi06/czitools/#README.md
    Source Code = https://github.com/sebi06/czitools/
    User Support = https://github.com/sebi06/czitools//issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9, <3.14

# add your package requirements here
install_requires =
    pylibCZIrw>=5
    aicspylibczi>=3.3.1
    bioio
    bioio-czi
    tqdm
    pandas
    python-dateutil
    python-box[all]
    czifile
    loguru
    pydantic
    xarray
    xarray[complete]

[options.extras_require]
all =
;     napari[all] # will install PyQt5
    seaborn
    plotly
    qtpy
    pyqtgraph
    colormap
    ngff-zarr
    ngff-zarr[validate]
    ngff-zarr[dask-image]
    bioio-ome-zarr

[options.packages.find]
where = src
exclude =
    data*
    docs*
    demo*
    images*
    archive

[options.exclude_package_data]
* =
  *.czi
  *.tif
  *.tiff
  *.csv
  *.html
  *.zarr
  *MetaData.xml
